# Student-Management-System

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-release.yaml  ci.yaml
documents/: Class-Diagram.drawio  Use-Case.drawio  hung.drawio
documents/Testing Document/: Testing Document Template.xlsx
documents/draw.io/: .$Class-Diagram.drawio.bkp  .$FDD.drawio.bkp  .$database design.drawio.bkp  Class-Diagram.drawio  DFD-Level0.drawio  DFD_Level2.2  DFD_Level2.4.drawio  DFD_Lv1.drawio  DFD_Lv2.1.drawio  DFD_Lv2.3.drawio  DFD_Lv2.5.drawio  DFD_Lvl0.drawio  FDD.drawio  Use-Case.drawio  Web-Interface-design.drawio  database design.drawio
src/: main.py
src/controller/: auth_controller.py
src/controllers/: admin_controller.py  auth_controller.py  fee_controller.py  financial_controller.py  notifications_controller.py  payment_controller.py  student_controller.py  transaction_controller.py
src/models/: account.py  admin.py  announcement.py  database.py  fee.py  student.py  test.py  transaction.py
src/utils/: email_service.py
src/views/: admin_dashboard.py  email_sent.py  financial_summary.py  forgot_password.py  login.py  make_anoucements.py  notification_detail.py  payment.py  student_dashboard.py  student_dashboard_view_notifications.py  student_management.py  student_profile.py  student_table.py  update_student_profile.py
src/views/admin/: admin_dashboard.py  admin_management.py  (+5 more)
tests/integration/: integration_test.py
tests/unit/: hung_test.py  khoi_test.py
(+5 files in other folders)
